CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( 3D-Reconstruct )
SET( CMAKE_CXX_COMPILER "g++")
SET( CMAKE_CXX_STANDARD 14)
SET (libSGM /home/xzhan178/dev/libSGM)
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 
SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES( ${libSGM}/include)


# CUDA options
SET(CUDA_ARCH "-arch=sm_35" CACHE STRING "Value of the NVCC -arch option.")
# OpenCV
FIND_PACKAGE( OpenCV 3.4 )
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
# CUDA
FIND_PACKAGE( CUDA REQUIRED)
INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
message(${CUDA_INCLUDE_DIRS})
# PCL
FIND_PACKAGE( PCL 1.9)
ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS}  )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )

SET( THIRD_PARTY_LIBRARIES ${OpenCV_LIBS} ${PCL_LIBRARIES} ${CUDA_LIBRARIES})
SET( libSGM_LIB ${libSGM}/build/src/libsgm.so)

add_subdirectory(./src/)
add_subdirectory(./test/)

